# stand-metrics

./: Dockerfile  Makefile  README.md  calculator.py  config.py  main.py  models.py  pyproject.toml
.github/workflows/: deploy.yml  test.yml
tests/: test_calculator.py
