[project]
name = "stand-metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.38",
    "fastapi[standard]>=0.117.1",
    "geojson-pydantic>=2.0.0",
    "opentelemetry-distro==0.43b0",
    "opentelemetry-exporter-otlp==1.22.0",
    "pip>=25.3",
    "pydantic-settings>=2.11.0",
    "rasterstats>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-append --cov-report term-missing --no-cov-on-fail --no-header --disable-warnings -rf --durations=5"
testpaths = ["tests"]
